# coreMsd

./: .flake8  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml  pr.yml
msd/: manage.py
msd/core/utils/: collections.py  misc.py
msd/project/: asgi.py  urls.py  wsgi.py
msd/project/settings/: __init__.py  auth.py  aws.py  base.py  custom.py  docker.py  envvars.py  logging.py
msd/project/settings/templates/: settings.dev.py
msd/users/: apps.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
msd/users/migrations/: 0001_initial.py  0002_vendoruser.py
scripts/: entrypoint.sh  production_data.py
